[package]
name = "tcp_proxy_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0",  features = ["full"]}
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
webpki-roots = "0.23.0"
anyhow = "1.0.70"
argh = "0.1.10"
